tests/resource_files_with_module_name_wrapper/test.js
require("./foo.css") as string; // error: boolean ~> string
